hw4_ws/log/build_2024-03-03_17-43-36/calculator/stderr.log
  File "/home/vboxuser/hw4_ws/install/calculator/lib/python3.10/site-packages/calculator/calculator.py", line 104
    f'Sending to server.. {formatted_time} %s %d %c %d = %f' %
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

